# amusic

./: README.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs
src-tauri/src/apple_music/: launcher.rs  mod.rs  player.rs
src-tauri/src/config/: constants.rs  mod.rs
src-tauri/src/discord/: client.rs  mod.rs
src-tauri/src/error/: mod.rs
src-tauri/src/ui/: mod.rs  tray.rs
src-tauri/src/utils/: artwork.rs  mod.rs
