[package]
name = "AMusic"
version = "0.1.0"
description = "A simple discord rich presence client for apple music build in Rust"
authors = ["@rxtsel"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "amusic_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.4.0", features = ["unstable", "tray-icon", "image-png"] }
tauri-plugin-opener = "2"
opener = "0.7.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mpris = "2.0.1"
dbus = "0.9.0"
discord-rich-presence = "0.2.5"
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
urlencoding = "2.1.3"
lazy_static = "1.5.0"
